[gd_scene load_steps=2 format=3 uid="uid://cmr8xvw3xlm8h"]

[ext_resource type="Script" path="res://scripts/Settings.gd" id="1_settings"]

[node name="Settings" type="CanvasLayer"]
script = ExtResource("1_settings")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TopBackButton" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 120.0
offset_bottom = 90.0
theme_override_font_sizes/font_size = 36
text = "X"

[node name="ColorRect" type="ColorRect" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.5)

[node name="ScrollContainer" type="ScrollContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -900.0
offset_right = 300.0
offset_bottom = 900.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 40

[node name="TitleLabel" type="Label" parent="Panel/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "SETTINGS"
horizontal_alignment = 1

[node name="Spacer1" type="Control" parent="Panel/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="MusicVolumeContainer" type="HBoxContainer" parent="Panel/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="MusicVolumeLabel" type="Label" parent="Panel/ScrollContainer/VBoxContainer/MusicVolumeContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Music Volume"
vertical_alignment = 1

[node name="MusicVolumeSlider" type="HSlider" parent="Panel/ScrollContainer/VBoxContainer/MusicVolumeContainer"]
custom_minimum_size = Vector2(300, 40)
layout_mode = 2
size_flags_horizontal = 3
max_value = 100.0
step = 1.0
value = 80.0

[node name="SFXVolumeContainer" type="HBoxContainer" parent="Panel/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="SFXVolumeLabel" type="Label" parent="Panel/ScrollContainer/VBoxContainer/SFXVolumeContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "SFX Volume"
vertical_alignment = 1

[node name="SFXVolumeSlider" type="HSlider" parent="Panel/ScrollContainer/VBoxContainer/SFXVolumeContainer"]
custom_minimum_size = Vector2(300, 40)
layout_mode = 2
size_flags_horizontal = 3
max_value = 100.0
step = 1.0
value = 100.0

[node name="Spacer2" type="Control" parent="Panel/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="VibrationToggleContainer" type="HBoxContainer" parent="Panel/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="VibrationToggleLabel" type="Label" parent="Panel/ScrollContainer/VBoxContainer/VibrationToggleContainer"]
custom_minimum_size = Vector2(350, 0)
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 32
text = "Vibration"
vertical_alignment = 1

[node name="VibrationToggle" type="CheckButton" parent="Panel/ScrollContainer/VBoxContainer/VibrationToggleContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
button_pressed = true
text = "ON"

[node name="AnnounceDropsContainer" type="HBoxContainer" parent="Panel/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="AnnounceDropsLabel" type="Label" parent="Panel/ScrollContainer/VBoxContainer/AnnounceDropsContainer"]
custom_minimum_size = Vector2(350, 0)
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 32
text = "Announce All Drops"
vertical_alignment = 1

[node name="AnnounceDropsToggle" type="CheckButton" parent="Panel/ScrollContainer/VBoxContainer/AnnounceDropsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
button_pressed = false
text = "OFF"

[node name="Spacer3" type="Control" parent="Panel/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="DeveloperContainer" type="VBoxContainer" parent="Panel/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 5
alignment = 1

[node name="DeveloperLabel" type="Label" parent="Panel/ScrollContainer/VBoxContainer/DeveloperContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Developer: Bonsai..."
horizontal_alignment = 1

[node name="DeveloperLogoButton" type="TextureButton" parent="Panel/ScrollContainer/VBoxContainer/DeveloperContainer"]
custom_minimum_size = Vector2(360, 360)
layout_mode = 2
size_flags_horizontal = 4
ignore_texture_size = true
stretch_mode = 5

[node name="MottoLabel" type="Label" parent="Panel/ScrollContainer/VBoxContainer/DeveloperContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
theme_override_colors/font_color = Color(0.6, 0.6, 0.6, 1)
text = "Pause. Reflect. Continue..."
horizontal_alignment = 1

[node name="Spacer5" type="Control" parent="Panel/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="MusicContainer" type="VBoxContainer" parent="Panel/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="MusicSubheader" type="Label" parent="Panel/ScrollContainer/VBoxContainer/MusicContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Music"
horizontal_alignment = 1

[node name="MusicLinkButton" type="Button" parent="Panel/ScrollContainer/VBoxContainer/MusicContainer"]
custom_minimum_size = Vector2(300, 60)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 24
text = "Jacob Lives Music"

[node name="Spacer6" type="Control" parent="Panel/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="BackButton" type="Button" parent="Panel/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(400, 100)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 40
text = "BACK"
